@@ -1,5 +1,5 @@
 /*
-    Copyright 2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2010-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -13,8 +13,8 @@
 using namespace fostlib;
 
 
-boost::mutex &fostlib::detail::g_parser_mutex() {
-    static boost::mutex m;
+boost::recursive_mutex &fostlib::detail::g_parser_mutex() {
+    static boost::recursive_mutex m;
     return m;
 }
 
